@@ -1,5 +1,5 @@
 ## Binary Analysis Tool
-## Copyright 2009-2011 Armijn Hemel for Tjaldur Software Governance Solutions
+## Copyright 2009-2012 Armijn Hemel for Tjaldur Software Governance Solutions
 ## Licensed under Apache 2.0, see LICENSE file for details
 
 import sys, os, subprocess, tempfile
