@@ -2,7 +2,7 @@
 #-*- coding: utf-8 -*-
 
 ## Binary Analysis Tool
-## Copyright 2011 Armijn Hemel for Tjaldur Software Governance Solutions
+## Copyright 2011-2012 Armijn Hemel for Tjaldur Software Governance Solutions
 ## Licensed under Apache 2.0, see LICENSE file for details
 
 '''
